--- a/litespeed/7.2-debian/httpd_config.conf
+++ b/litespeed/7.2-debian/httpd_config.conf
@@ -4,8 +4,8 @@
 
 #It not set, will use host name as serverName
 serverName
-user                             nobody
-group                            nogroup
+user                             lsadm
+group                            lsadm
 priority                         0
 autoRestart                      1
 chrootPath                       /
